# i18n-puzzles

./: .gitignore  .tasks  README.md  justfile  pyproject.toml
src/main/java/com/github/pareronia/i18n_puzzles/: Puzzle2025_01.java  Puzzle2025_02.java  Puzzle2025_03.java  Puzzle2025_04.java  Puzzle2025_05.java  Puzzle2025_06.java  Puzzle2025_07.java  Puzzle2025_08.java  Puzzle2025_09.java  Puzzle2025_10.java  Puzzle2025_11.java  Puzzle2025_12.java  Puzzle2025_13.java  Puzzle2025_14.java  Puzzle2025_15.java  Puzzle2025_18.java  Puzzle2025_19.java  PuzzleRunner.java  WIP_Puzzle2025_16.java
src/main/java/com/github/pareronia/i18n_puzzles/common/: ANSIColors.java  Logger.java  LoggerEnabled.java  Sample.java  Samples.java  SolutionBase.java  SolutionUtils.java  SystemUtils.java  Timed.java  Utils.java  ZoneInfo.java
src/main/java/com/github/pareronia/i18n_puzzles/graph/: BFS.java
src/main/python/: Puzzle2025_01.py  Puzzle2025_02.py  Puzzle2025_03.py  Puzzle2025_04.py  Puzzle2025_05.py  Puzzle2025_06.py  Puzzle2025_07.py  Puzzle2025_08.py  Puzzle2025_09.py  Puzzle2025_10.py  Puzzle2025_11.py  Puzzle2025_12.py  Puzzle2025_13.py  Puzzle2025_19.py
src/main/python/i18n_puzzles/: __init__.py  common.py  format.py  memo.py
src/main/python/i18n_puzzles/runner/: __main__.py  runner.py
src/main/python/i18n_puzzles/table/: __main__.py  table.py
src/main/python/table/: __init__.py  __main__.py  table.py
