[project]
name = "i18n-puzzles"
version = "0.1.0"
description = "Internationalization Puzzles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prettyprinter>=0.18.0",
    "termcolor>=2.5.0",
    "tzdata>=2025.2",
]

[tool.bandit]
exclude_dirs = [".venv"]
skips = ["B101"]

[tool.black]
line-length = 79

[tool.flake8]
extend-exclude = [".venv", "*~", "*.swp", "*.pyc", ".mypy_cache", "*.txt", ".gitignore", "*.toml"]
filename = "*.py"

[tool.isort]
profile = "black"
line_length = 79
force_single_line = true
skip_gitignore = true
include_trailing_comma = true

[tool.mypy]
strict = true
python_executable = "python"

[[tool.mypy.overrides]]
module = "prettyprinter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyperclip.*"
ignore_missing_imports = true

[tool.vulture]
exclude = [".venv"]
min_confidence = 80

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "black>=25.1.0",
    "flake8==7.0.0",
    "flake8-pyproject>=1.2.3",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pyperclip>=1.9.0",
    "vulture>=2.14",
]
